# app/Http/Controllers/Controller.php
@@ -17,10 +17,6 @@ class Controller extends BaseController
      *      description="L5 Swagger OpenApi description",
      *      @OA\Contact(
      *          email="admin@admin.com"
-     *      ),
-     *      @OA\License(
-     *          name="Apache 2.0",
-     *          url="http://www.apache.org/licenses/LICENSE-2.0.html"
      *      )
      * )
      *
