# routes/api.php
@@ -18,5 +18,16 @@ Route::middleware('auth:api')->get('/user', function (Request $request) {
     return $request->user();
 });
 
-
-Route::get('/api/v1/cars',[App\Http\Controllers\Api\V1\ExampleController::class]);
+/**
+ * Router list version 1
+ */
+Route::prefix('/v1')->group(function (){
+    Route::prefix('/example')->group(function (){
+        Route::get('',[App\Http\Controllers\Api\V1\ExampleController::class, 'index']);
+        Route::post('',[App\Http\Controllers\Api\V1\ExampleController::class, 'store']);
+        Route::get('/{id}',[App\Http\Controllers\Api\V1\ExampleController::class, 'show']);
+        Route::put('/{id}',[App\Http\Controllers\Api\V1\ExampleController::class, 'update']);
+        Route::patch('/{id}',[App\Http\Controllers\Api\V1\ExampleController::class, 'edit']);
+        Route::delete('/{id}',[App\Http\Controllers\Api\V1\ExampleController::class, 'destroy']);
+    });
+});
